<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">BuGO</string>

    <!--@Can-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--menu text-->
    <string name="menu_welcome_txt">Welcome to BuGO</string>
    <string name="menu_start_txt">Start exploring the campus!</string>
    <!--button text-->
    <string name="menu_location_button">Show Me My Location</string>
    <string name="menu_buildings_button">Identify Buildings</string>
    <string name="menu_directions_button">Give Me Directions</string>
    <string name="menu_credits_button">Credits</string>

    <!--credits page-->
    <string name="credits_teamAzm">Team AZM</string>
    <string name="credits_names"> \nDoğaç Eldenk \nFaruk Balcı \nMehmet Ata Yurtsever \nAdile Büşra Ünver \nIşın Su Ecevit \nCem Cebeci \nCan Cebeci</string>
    <string name="credits_title">Credits</string>
    <string name="credits_course_info">\n Created for Bilkent University CS102 course. \n\n Instructor: David Davenport \n\n TA: Cihan Eryonucu \n\n 2017-2018 Spring Semester</string>

    <!--building info page-->
    <string name="button_take_me_there">Take Me There</string>
    <string name="info_function">Function: </string>
    <string name="info_number_of_floors">Number of Floors: </string>
    <string name="info_study_spaces">Study Spaces: </string>
</resources>
