<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Credits">

    <!--credits title-->
    <TextView
        android:id="@+id/txtCredit"
        android:layout_width="85dp"
        android:layout_height="37dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/credits_title"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/bugoColor" />

    <!--team azm title-->
    <TextView
        android:id="@+id/txtTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtCredit"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/credits_teamAzm"
        android:textAlignment="center"
        android:textColor="@color/bugoColor"
        android:textSize="18sp" />

    <!--team azm names-->
    <TextView
        android:id="@+id/txtNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTeam"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:lineSpacingExtra="10sp"
        android:text="@string/credits_names"
        android:textAlignment="center"
        android:textColor="@color/bugoColor" />

    <!--course information-->
    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNames"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/credits_course_info"
        android:textAlignment="center"
        android:textColor="@color/bugoColor" />

</RelativeLayout>